--- a/ResourceMigrator/ResourceMigrator.csproj
+++ b/ResourceMigrator/ResourceMigrator.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Helpers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Touch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
